--- a/.github/workflows/prod_aws.yml
+++ b/.github/workflows/prod_aws.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Acessar diretório do frontend
-        run: cd aura-frontend/site-institucional
+        run: cd site-institucional
 
       - name: Configurar Node.js
         uses: actions/setup-node@v3
@@ -21,16 +21,16 @@ jobs:
           node-version: 20
 
       - name: Criar arquivo .env
-        working-directory: aura-frontend/site-institucional
+        working-directory: site-institucional
         run: |
           echo "VITE_API_URL_V2=/api" > .env
 
       - name: Instalar dependências
-        working-directory: aura-frontend/site-institucional
+        working-directory: site-institucional
         run: npm install
 
       - name: Build do projeto
-        working-directory: aura-frontend/site-institucional
+        working-directory: site-institucional
         run: npm run build
 
       - name: Copiar build para EC2
@@ -39,7 +39,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "AURA-FRONTEND/site-institucional/dist/*"
+          source: "site-institucional/dist/*"
           target: "/tmp/frontend-build"
 
       - name: Mover arquivos para /var/www/html na EC2
