--- a/site-institucional/package.json
+++ b/site-institucional/package.json
@@ -21,7 +21,9 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-input-mask": "^2.0.4",
-    "react-router-dom": "^7.5.1"
+    "react-router-dom": "^7.5.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -29,11 +31,13 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
+    "css-loader": "^7.1.2",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "postcss": "^8.5.6",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.12",
     "vite": "^6.2.4"
   }
